SFDCProject/src/objects/SR_Attachment__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bucket_Name__c</fullName>
        <label>Bucket Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Signature_Status__c</fullName>
        <formula>IF (ISPICKVAL(Customer_Signed__c, &quot;Wet Signed&quot;), &quot;Wet Signed&quot;, 
IF (AND (ISPICKVAL(Customer_Signed__c, &quot;No&quot;),ISPICKVAL( DocuSign_Status__c , &quot;Completed&quot;)), &quot;e-signatures completed&quot; , 
IF (AND (ISPICKVAL(Customer_Signed__c, &quot;No&quot;),ISPICKVAL( DocuSign_Status__c , &quot;Voided&quot;)), &quot;e-signatures voided&quot; , 
IF (AND (ISPICKVAL(Customer_Signed__c, &quot;No&quot;),ISPICKVAL( DocuSign_Status__c , &quot;Declined&quot;)), &quot;e-signatures declined&quot;, &quot;e-signatures in progress&quot;) )))</formula>
        <label>Customer Signature Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Signed__c</fullName>
        <label>Customer Signed</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DocuSign_Error_Code__c</fullName>
        <label>DocuSign Error Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_Error_Message__c</fullName>
        <label>DocuSign Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DocuSign_Status__c</fullName>
        <label>DocuSign Status</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wet Signed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Classification__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Document Classification</label>
        <referenceTo>Document_Classification__c</referenceTo>
        <relationshipLabel>SR Attachments</relationshipLabel>
        <relationshipName>SR_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Id__c</fullName>
        <label>Document Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Document_Name_On_File_Server__c</fullName>
        <label>Document Name on File Server</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Source__c</fullName>
        <label>Document Source</label>
        <picklist>
            <picklistValues>
                <fullName>Proposal Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Upload</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eSign</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Document_Type_Name__c</fullName>
        <formula>Document_Classification__r.Document_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ETag__c</fullName>
        <label>ETag</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Envelop_Id__c</fullName>
        <externalId>true</externalId>
        <label>Envelop Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folder_Name__c</fullName>
        <label>Folder Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marked_For_Deletion__c</fullName>
        <label>Marked For Deletion</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OSA_URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>SR_Docs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Proposal_Name__c</fullName>
        <label>Parent Proposal Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_SR_Attachment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent SR Attachment</label>
        <referenceTo>SR_Attachment__c</referenceTo>
        <relationshipLabel>SR Attachments</relationshipLabel>
        <relationshipName>SR_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <label>Partner Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Signed__c</fullName>
        <label>Partner Signed</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Document_Type__c</fullName>
        <label>Proposal Document Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Marked_For_Deletion__c</fullName>
        <formula>TEXT(Proposal__r.Marked_For_Deletion__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposal Marked For Deletion</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Source__c</fullName>
        <label>Proposal Source</label>
        <picklist>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposal</label>
        <referenceTo>Proposal__c</referenceTo>
        <relationshipName>SR_Docs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Customer_Status__c</fullName>
        <label>Secondary Customer Status</label>
        <picklist>
            <picklistValues>
                <fullName>Created</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>SR Attachments</relationshipLabel>
        <relationshipName>SR_Attachments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SunRun_Signed__c</fullName>
        <label>SunRun Signed</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wet Signed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Wet_Sign_Status__c</fullName>
        <description>This Field used to Specify the status whether signature is required or not</description>
        <label>Wet Signature Status</label>
        <picklist>
            <picklistValues>
                <fullName>Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsigned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Applicable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SR Attachment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Document_Name__c</columns>
        <columns>Proposal__c</columns>
        <columns>Wet_Sign_Status__c</columns>
        <columns>DocuSign_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Proposal__c</field>
            <operation>contains</operation>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SR Attachments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>